# BHTP-Tools

./: .gitignore  README.md  app.py  build_questdb.py  demo05.py  demo05a.py  demo05b.py  demo06.py  demo4.py  pyproject.toml  req2.txt  requirements.txt  tafuncs.py  tafuncs.txt  uninstall.txt
docs/: bhtp.rst  conf.py  github.rst  index.rst  modules.rst  requirements.txt
docs/_html/doctrees/: bhtp.doctree  environment.pickle  github.doctree  index.doctree
examples/: demo01.py  demo02.py  demo03.py  demo04.py  demo10.py
src/bhtp/: __init__.py  __main__.py  charts.py  data.py  github.py  indicators.py  loader.py  patterns.py  strategies.py  symbols.py  universe.py  yahoo.py
tests/: conftest.py  test_github.py  test_indicators.py  test_loader.py  test_main.py  test_universe.py
tests/test_data_folder/: NASDAQ-BM0-2023-03-10.csv  NASDAQ-HC1-2023-03-05.csv  NASDAQ-UT0-2023-03-27.csv
