[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bhtp"
dynamic = ["version"]
description = "Package to manage tools for trading using the BHTP Platform"
readme = "README.md"
authors = [
    {name = "PoivronJaune", email="poivronjaune@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10"
]
keywords = ["trading", "OHLC", "Minute prices", "Stockmarket"]
dependencies = [
    "pandas",
    "requests",
    "yfinance"
]
requires-python = ">3.10"

[project.optional-dependencies]
build = ["build","twine"]
dev = ["black", "pytest", "sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "recommonmark"]

[tool.setuptools.dynamic]
version = {attr = "bhtp.__version__"}

[project.scripts]
bhtp = "bhtp.__main__:main"
